# GOIT-Python_Web-HW-14

./: README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/versions/: 1ad4be74e781_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16398  16399  16401  16403  16404  16412  16413  16415  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
