[tool.poetry]
name = "goit-python-web-hw-14"
version = "0.1.0"
description = ""
authors = ["Iryna Dachuk <iradachuk@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw_14"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standart"], version = "^0.23.0"}
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
fastapi-mail = "^1.3.1"
redis = "^4.6.0"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"
pytest = "^7.4.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
